test/parallel/taskPar/vass/with-bool.good
with-bool.chpl:3: error: cannot apply a forall or task intent to a type or a param, here 'bool'
