test/parallel/taskPar/vass/with-bool.chpl
// Ensure the compiler produces a graceful error.

coforall Locales with (in bool) {
  writeln();
}
